# routeradm

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
frontend/: README.md  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/macos/: entitlements.plist
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/clients/: page.tsx
frontend/src/app/firewall/: page.tsx
frontend/src/app/guest/: page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/app/network/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/vpn/: page.tsx
frontend/src/app/wifi/: page.tsx
frontend/src/components/layout/: sidebar.tsx  topbar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/hooks/: usePi.ts
frontend/src/lib/: api.ts  store.test.ts  store.ts  usePi.test.ts  utils.test.ts
pi-backend/: .env.example  README.md  requirements-dev.txt  requirements.txt  router-api.service  setup.sh
pi-backend/src/: main.py
pi-backend/src/models/: schemas.py
pi-backend/src/routers/: api.py
pi-backend/src/services/: _validation.py  auth.py  firewall.py  guest.py  logger.py  network.py  state.py  utils.py  vpn.py  wifi.py
pi-backend/tests/: test_api.py  test_backup.py  test_schemas.py  test_utils.py
