[package]
name = "travel-router-admin"
version = "0.1.0"
description = "TravelRouter Admin - macOS app for managing travel routers"
authors = ["TravelRouter"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "travel_router_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
keyring = "3"
mdns-sd = "0.12"
log = "0.4"
tauri-plugin-log = "2"
